@@ -1,5 +1,11 @@
 2015-08-02  Goedson Teixeira Paixao  <goedson@debian.org>
 
+	* src/status-icon.c (gtt_status_icon_create): Replaced usage of deprecated function
+	gtk_status_icon_new_from_stock by gtk_status_icon_new_from_icon_name.
+	(gtt_status_icon_start_timer): Replaced usage of deprecated functions
+	gtk_status_icon_set_from_stock and gtk_status_icon_set_tooltip by their new counterparts
+	gtk_status_icon_set_from_icon_name and gtk_status_icon_set_tooltip_text.
+
 	* src/menucmd.c (new_project): Fix creation of dialog.
 	(new_project): Replace usage of GtkTable by GtkGrid.
 
